modify cors settings